[package]
name = "quivers"
version = "0.1.0"
authors = ["Will Eaton <me@wseaton.com>"]
edition = "2018"

[lib]
name = "quivers"
crate-type = ["cdylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
redis = "*"
pythonize = "0.12.1"
arrow = "*"
snap = "*"

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]
